fixed the nav on mobile

--- a/src/shared/styles.css
+++ b/src/shared/styles.css
@@ -58,7 +58,7 @@ body {
 #main {
   margin: 0 auto;
   display: flex;
-  height: 90vh;
+  height: 100%;
   background-color: var(--bizblue);
   flex-direction: column;
   justify-content: flex-start;
@@ -74,6 +74,13 @@ body {
   padding: 15px;
   background-color: var(--bizblue);
   color: var(--white)
+}
+
+.home-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 
 a {
@@ -127,12 +134,6 @@ li {
     text-align: center;
   }
 
-  .home-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-  }
 
 }
 
@@ -145,7 +146,7 @@ li {
     align-items: center;
     padding-left: 0px;
     position: fixed;
-    bottom: 50px;
+    bottom: 9vh;
     width: 100vw;
     height: 25%;
     cursor: pointer;
@@ -158,7 +159,9 @@ li {
     width: 100vw;
     position: fixed;
     cursor: pointer;
-    bottom: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    bottom: 0px;
   }
 
   #nav {
